Создание реста, тестов и старого сервиса

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jooq.sql-dialect=H2
 
 spring.datasource.initialize=false
 spring.datasource.continueOnError=true
+
+server.contextPath=/myApp
